--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@remix-run/react": "^1.11.1",
     "@remix-run/vercel": "^1.11.1",
     "@stripe/stripe-js": "^1.46.0",
+    "@supabase/supabase-js": "^2.20.0",
     "aws-sdk": "^2.1275.0",
     "cross-env": "^7.0.3",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.0",
     "framer-motion": "^7.10.3",
+    "invariant": "^2.2.4",
     "lucide-react": "^0.145.0",
     "openai": "^3.2.1",
     "react": "^18.2.0",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@remix-run/eslint-config": "^1.7.5",
     "@remix-run/serve": "^1.9.0",
+    "@types/invariant": "^2.2.35",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^9.0.0",
